--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body{
     height:400px;
     flex-direction: column;
     border: 5px solid black;
+    background-color: black;
 }
 .displayer{
     height:50px;
@@ -16,7 +17,7 @@ body{
     color:black;
     padding:5px;
     display:flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: flex-end;
 }
 h1{
@@ -31,11 +32,11 @@ h1{
 .row{
     flex:1;
     display:flex;
-    border: 2px solid black;
 }
 .cell{
-    width:75px;    
-    border:2px solid black;
+    width:75px;
+    font-size:large;
+    font-weight:bolder;    
 }
 .number{
     background-color: lightblue;
@@ -53,4 +54,7 @@ h1{
 #row0{
     flex:0.5;
     background-color: lightgreen;
+}
+.decimal{
+    background-color: aqua;
 }
